미리보기 추가중

--- a/html/editor.html
+++ b/html/editor.html
@@ -44,7 +44,7 @@
                         <div id="pages">
                             <svg id="pages-thumbnails" xmlns="http://www.w3.org/2000/svg" version="1.1" fill-rule="evenodd" stroke="none" stroke-linecap="square"
                                  stroke-miterlimit="10" overflow="hidden" preserveAspectRatio="none" style="top: 0px; left: 0px; position: absolute;"
-                                 width="1700px" height="833px">
+                                 width="1700px">
                             </svg>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
     var manager = new editManager();
     manager.drawFilmstrip();
     manager.getSize();
-    manager.drawCanvas();
+    manager.drawSVG("page-1");
 </script>
 
 </body>
