--- a/html/editor.html
+++ b/html/editor.html
@@ -42,10 +42,7 @@
                             </div>
                         </div>
                         <div id="pages">
-                            <svg id="pages-thumbnails" xmlns="http://www.w3.org/2000/svg" version="1.1" fill-rule="evenodd" stroke="none" stroke-linecap="square"
-                                 stroke-miterlimit="10" overflow="hidden" preserveAspectRatio="none" style="top: 0px; left: 0px; position: absolute;"
-                                 width="1700px">
-                            </svg>
+
                         </div>
                     </div>
                 </div>
@@ -60,6 +57,7 @@
     manager.drawFilmstrip();
     manager.getSize();
     manager.drawSVG("page-1");
+    manager.drawCanvas();
 </script>
 
 </body>
