--- a/html/ssmemodocs.html
+++ b/html/ssmemodocs.html
@@ -25,21 +25,49 @@
     <script src='../lib/jquery-ui-1.10.0.js'></script>
     <script src='../lib/jquery-ui-1.10.0.min.js'></script>
     <script src='../lib/farbtastic.js'></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
 
     <!-- Custom JS -->
     <script src="../js/editManager.js"></script>
 
     <!-- CSS -->
     <link href="../css/ssmemodocs.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
 
 </head>
 <body>
 <div id="editor-container">
     <div id="tools">
-        <p>제목이 들어갈 부분 </p>
+        <div id="name">
+            <p>이름 들어가야함</p>
+        </div>
 
-        <p>각종 툴들 들어갈 부분</p>
+        <div id="tool">
+            <button class="add-slide"><i class="material-icons">note_add</i></button>
+            <button class="align-left"><i class="material-icons">format_align_left</i></button>
+            <button class="align-center"><i class="material-icons">format_align_center</i></button>
+            <button class="align-right"><i class="material-icons">format_align_right</i></button>
+            <button class="align-normal"><i class="material-icons">format_align_justify</i></button>
+            <button class="text-box"><i class="material-icons">format_shapes</i></button>
+            <button class="italic"><i class="material-icons">format_italic</i></button>
+            <button class="underline"><i class="material-icons">format_underlined</i></button>
+            <button class="bold"><i class="material-icons">format_bold</i></button>
+            <button class="color"><i class="material-icons">format_color_fill</i></button>
+            <button class="photo"><i class="material-icons">insert_photo</i></button>
+            <button class="save"><i class="material-icons">picture_as_pdf</i></button>
+            <button class="redo"><i class="material-icons">redo</i></button>
+            <button class="undo"><i class="material-icons">undo</i></button>
+            <button class="text-box"><i class="material-icons">create</i></button>
+            <button class="triangle"><i class="material-icons">change_history</i></button>
+            <button class="rect"><i class="material-icons">crop_square</i></button>
+            <button class="circle"><i class="material-icons">panorama_fish_eye</i></button>
+            <i class="material-icons">sync</i>
+            <i class="material-icons">done</i>
+        </div>
+
     </div>
+
     <table id="panels">
         <tbody>
         <tr>
@@ -64,32 +92,43 @@
 <!--script 실행 부분-->
 <script>
 
-
-    $(document).ready(function() {
+    $(document).ready(function () {
         var manager = new editManager();
         manager.initMethod();
 
-        $(window).resize(function() {
+
+        $(window).resize(function () {
             manager.setEditorSize();
         });
 
-        // mouse event 등록
-        $(".thumbnail-container").hover(function() {
+        // mouse event 등록 // 툴 들
+        $("button").hover(function() {
             $(this).addClass("mouse-in");
         }, function() {
             $(this).removeClass("mouse-in");
-        }).on("click", function() {
-            var hide = $(".click").children(0).html();
-            if (hide == null)   hide = 1;
-            $("div.click").removeClass("click");
-
-            $(this).addClass("click");
-            var vis = $(".click").children(0).html();
-            manager.changePage(hide, vis);
         });
 
-    });
+        // 그리기 함수 호출
+        $(".add-slide").on("click", function() {
+           manager.addSlide();
 
+            $(".thumbnail-container").hover(function () {
+                $(this).addClass("mouse-in");
+            }, function () {
+                $(this).removeClass("mouse-in");
+            }).on("click", function () {
+                var hide = $(".click").children(0).html();
+                $("div.click").removeClass("click");
+
+                $(this).addClass("click");
+                var vis = $(".click").children(0).html();
+                manager.changePage(hide, vis);
+            });
+        });
+
+        $(".add-slide").trigger("click");
+        manager.changePage(1, 1);
+    });
 
 
 
